fixing whitebackground on safari

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -388,7 +388,7 @@ html, body {
 .whitebackground {
   background-color: white;
   width: 1920px;
-  height: 1000px;
+  height: 1400px;
 }
 
 .flameRocks {
